After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740348 - Fixing memory leaks detected by cppcheck
Fixing memory leaks detected by cppcheck
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: general
3.14.x
Other Linux
: Normal normal
: ---
Assigned To: EOG Maintainers
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-19 04:44 UTC by Boris Egorov
Modified: 2014-11-19 19:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to fix a few memory leaks (1.20 KB, patch)
2014-11-19 04:45 UTC, Boris Egorov
none Details | Review
Cppcheck report (308.20 KB, application/zip)
2014-11-19 04:47 UTC, Boris Egorov
  Details

Description Boris Egorov 2014-11-19 04:44:29 UTC
I found a few memory leaks in eog with cppcheck. Attached patch fixes some of them.
Comment 1 Boris Egorov 2014-11-19 04:45:02 UTC
Created attachment 290956 [details] [review]
Patch to fix a few memory leaks
Comment 2 Boris Egorov 2014-11-19 04:46:39 UTC
Second attach contains cppcheck report in txt (errors.log), xml (errors.xml), and html (html directory) forms. Report created after applying my patch.
Comment 3 Boris Egorov 2014-11-19 04:47:18 UTC
Created attachment 290957 [details]
Cppcheck report
Comment 4 Felix Riemann 2014-11-19 19:55:13 UTC
Thanks. I also fixed two of the other leaks that were listed in your report.
The one in EogExifUtils is only theoretical as the second condition doesn't actually fail in that case.

commit a9be9741fce0b9be0e0d4f9051c576e449b5a1b0
Author: Felix Riemann <>
Date:   Wed Nov 19 20:31:25 2014 +0100

    Fix two more memory leaks
    
    Taken from a Cppcheck report provided by Boris Egorov.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=740348

commit 64cc76ccbfd7e5c59d007bfc1bac1c1365c501d7
Author: Boris Egorov <>
Date:   Wed Nov 19 10:26:22 2014 +0600

    Fix a few memory leaks
    
    Detected by Cppcheck
    
    Signed-off-by: Boris Egorov <>
---
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.